[workspace]

members = [
    "ch01_getting_started",
    "ch02_guessing_game",
    "ch03_variables",
    "ch04_functions",
    "ch05_branches",
    "ch06_ownership",
    "ch07_slices",
    "ch08_structs",
    "ch09_enums",
    "ch10_modules",
    "ch11_collections",
    "ch12_errors",
    "ch13_generics",
    "ch14_tests",
]
