[workspace]

members = [
    "ch01_getting_started",
    "ch02_guessing_game",
    "ch03a_variables",
    "ch03b_functions",
    "ch03c_branches",
    "ch04a_ownership",
    "ch04b_slices",
    "ch05_structs",
    "ch06_enums",
    "ch07_modules",
    "ch08_collections",
    "ch09_errors",
    "ch10_generics",
    "ch11_tests",
    "ch12_minigrep",
    "ch13a_functional",
    "ch13b_minigrep2",
    "ch14a_adder",
    "ch14b_add_one",
    "ch15_smartpointers",
    "ch16_concurrency",
    "ch17_objectoriented",
    "ch18_patterns",
    "ch19_advancedfeatures",
    "ch20_webserver",
]
